--- a/inst/exerciceML/exerciceML_corrige.qmd
+++ b/inst/exerciceML/exerciceML_corrige.qmd
@@ -139,7 +139,7 @@ $$
 ### Compléter le tableau suivant avec les performances de ce première modèle.
 
 | Modèle testé                       | Exactitude | Sensibilité | Spécificité | AUC  |
-|----------------|--------------|--------------|--------------|--------------|
+|---------------|---------------|---------------|---------------|---------------|
 | *Modèle 1 : Regression logistique* | 77 %       | 90 %        | 52 %        | 0,83 |
 
 : Performances de la regression logistique
@@ -169,7 +169,7 @@ Cet arbre n'est pas très profond (2 nvieaux seulement). Il n'y a que 3 noeuds (
 ### Compléter le tableau suivant avec les performances de ce deuxi-me modèle.
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|----------------|--------------|--------------|--------------|--------------|
+|---------------|---------------|---------------|---------------|---------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 
@@ -196,7 +196,7 @@ Chaque arbre est constitué par défaut de 3 variables tirées aléatoirement (M
 ### Noter les indicateurs de performance de ce troisième modèle dans le tableau comparatif ci-dessous :
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|----------------|--------------|--------------|--------------|--------------|
+|---------------|---------------|---------------|---------------|---------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
@@ -212,7 +212,7 @@ Par défaut, la valeur retenue par l'algorithme est 5.
 ### Noter les indicateurs dans le tableau comparatif des modèles
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|----------------|--------------|--------------|--------------|--------------|
+|---------------|---------------|---------------|---------------|---------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
@@ -239,7 +239,7 @@ Non. Le modèle final s'ajuste sur la base d'entraînement (70 % des données) e
 :::
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|----------------|--------------|--------------|--------------|--------------|
+|---------------|---------------|---------------|---------------|---------------|
 | *Modèle 1 : Regression logistique*   | 99 %       | 100 %       | 98 %        | 1    |
 | *Modèle 2 : arbre de classification* | 99 %       | 100 %       | 94 %        | 0,98 |
 | *Modèle 3 : forêt aléatoire*         | 99 %       | 100 %       | 98 %        | 1    |
@@ -370,7 +370,7 @@ Difficile à dire : on peut regarder le RMSE, qui nous dit qu'en moyenne, les pr
 ### Compléter le tableau ci-dessous avec les performances des autres modèles :
 
 | Modèle testé sur la base avec imputation par la moyenne |  RSS   | MSE | RMSE |  R²  |
-|----------------------|:-----------:|:-----------:|:-----------:|:-----------:|
+|-----------------|:------------:|:------------:|:------------:|:------------:|
 | *Modèle 1 : Forêt aléatoire*[^1]                        | 39 362 | 192 | 13,9 | 0,71 |
 | *Modèle 2 : Arbre de regression*                        | 56 900 | 278 | 16,7 | 0,59 |
 | *Modèle 3 : Régression linéaire*                        | 45 416 | 222 | 14,9 | 0,68 |
@@ -389,19 +389,16 @@ C'est la forêt aléatoire qu regard de tous les indicateurs.
 ### Le R² se rapproche de 1. Etait-ce prévisible ?
 
 ::: {style="color: blue;"}
-Oui parce que plus un modèle a d'individus, mieux il apprend. Or ici, on a ajouté la base de validation pour ajuster notre algorithme.
+Non ce n'était pas prévisible. On a ajusté la forêt aléatoire sur davantage d'individus (entraînement + validation), ce qui a pour effet d'améliorer l'apprentissage. Cependant, la base de test n'a jamais été utilisé ni pour estimer les paramètres, ni pour choisir le modèle le plus performant. Donc les performances sont moindres.
 :::
 
 ::: callout-tip
-
 ## Mise en situation 2
 
 *En tant que gouverneur de Grandile, vous souhaitez disposer du maximum d'information sur vos résidents. Notamment, vous voulez connaître leurs revenus disponibles, information que les Grandiliens ne sont pas toujours disposés à donner.*
 
 *A partir de la base de données grandile, votre mission est de choisir l'algorithme le plus performant pour prédire le revenu disponible d'un ménage à partir des autres informations socio-économiques.*
-
 :::
-
 
 ### Compléter le tableau pour comparer les performances des algorithmes.
 
@@ -420,8 +417,9 @@ Oui parce que plus un modèle a d'individus, mieux il apprend. Or ici, on a ajou
 La forêt aléatoire, comme d'habitude ! Mais le KNN avec K = 5 marche bien aussi. Les performances sont proches de celles de la forêt aléatoire, et ce modèle est moinds gourmand en ressources.
 :::
 
-### Ajuster ce modèle sur la base d'entraînement et de validation puis généraliser le sur des données qu'il n'a jamais vu (les données de test)
+### Ajuster ce modèle sur la base d'entraînement et de validation puis généraliser le sur des données qu'il n'a jamais vu (les données de test). Que peut-on conclure ?
 
 ::: {style="color: blue;"}
-Le modèle marche encore mieux, puisque on a davantage d'individus.
+
+La base de test n'a jamais été utilisée pour ajuster ou choisir le modèle, donc il est possible que les performances des indicateurs soient moindres que dans l'étape précédente avec le même modèle. Cependant, le modèle apprend sur davantage d'individus (entraînement + validation), donc il apprend mieux. Ce qu'on constate, c'est que les performances sont comparables : elles sont excellentes !
 :::
