--- a/inst/exerciceML/exerciceML_corrige.qmd
+++ b/inst/exerciceML/exerciceML_corrige.qmd
@@ -20,7 +20,11 @@ embed-resources: true
 *Vous avez été embauché par le CIVB (comité interprofessionnel des vins de Bordeaux) pour mettre en place un algorithme qui permet de prévoir la qualité du vin en fonction de sa composition chimique. Vous disposez d'une base de données brute avec des références de vins de Bordeaux, chacune ayant été évaluée par des professionnel avec une note entre 1 et 10. A partir de 6, le vin est considéré comme bon, en dessous de 6, il est considéré comme mauvais.*
 :::
 
-*Etape 1 : Dans l'onglet "données" : cliquer pour explorer la base de données sur les vins.*
+::: callout-note
+## Etape 1
+
+*Dans l'onglet "données" : cliquer pour explorer la base de données sur les vins.*
+:::
 
 ### Combien d'individus dans la base de donnéees brute vins ?
 
@@ -52,7 +56,11 @@ Il y a 11 variables quantitatives continues qui sont les compositions chimique d
 Aucune donnée manquante dans ce jeu de données : c'est très rare d'avoir une base de donnée brute aussi propre !
 :::
 
-*Etape 2 : Dans l'onglet "préparation" : conserver 70 % de la base brute pour l'entraînement.*
+::: callout-note
+## Etape 2
+
+*Dans l'onglet "préparation" : conserver 70 % de la base brute pour l'entraînement.*
+:::
 
 ### A quoi vont servir les bases d'entraînement et de validation ?
 
@@ -78,7 +86,11 @@ Le poids de chacune des modalités est le même dans la base d'entraînement que
 Non, par exemple, la variable quantitative "total.sulfur.dioxide" a une moyenne de 138,0 alors que le "Ph" a une moyenne de 3,2.
 :::
 
-*Etape 3 : Dans l'onglet "préparation", appliquer la recette suivante sur la base d'entraînement : "centrer-réduire les quantitatives" (en anglais : step_normalize).*
+::: callout-note
+## Etape 3
+
+*Dans l'onglet "préparation", appliquer la recette suivante sur la base d'entraînement : "centrer-réduire les quantitatives" (en anglais : step_normalize).*
+:::
 
 ### Quels sont les effets de cette "recette" sur les variables prédictives de la base d'entraînement ?
 
@@ -86,7 +98,11 @@ Non, par exemple, la variable quantitative "total.sulfur.dioxide" a une moyenne 
 Les moyennes des variables quantitatives prédictives sont toutes très proches de 0 et les écart-types sont égaux à 1. Les variables ont maintenant les mêmes ordres de grandeur.
 :::
 
-*Etape 4 : Dans l'onglet "modèle", choisir la régression logistique et ajuster le modèle sur la base d'entraînement.*
+::: callout-note
+## Etape 4
+
+*Dans l'onglet "modèle", choisir la régression logistique et ajuster le modèle sur la base d'entraînement.*
+:::
 
 ### Quelle est la différence entre une estimation et une prévision ?
 
@@ -102,13 +118,11 @@ Une prévision est calculé sur une base n'ayant pas du tout servi à construire
 Par défaut, si la probabilité d'une modalité est supérieure à 0,5, c'est cette valeur qui est estimée. Ce seuil peut en théorie être modifié.
 :::
 
-### Quel indicateur nous donne des informations sur la qualité du modèle ?
+::: callout-note
+## Etape 5
 
-::: {style="color: blue;"}
-L'AIC (Akaike information criterion) nous donne un indicateur de qualité du modèle : en plus de sa capacité à faire de bonnes estimations, il prend en compte la complexité du modèle, c'est à dire le nombre de variables et de modalités pour une régression logistique. La complexité du modèle va pénaliser l'AIC. Plus il est proche de 0, meilleur est sa qualité. Il est difficile à interpréter tout seul : il faudrait essayer de retirer des variables pour voir quel est le meilleur modèle (en enlevant des redondances).
+*Dans l'onglet "Validation", évaluer la performance du modèle retenu précédemment (modèle 1 : régression logistique sur la base centrée réduite).*
 :::
-
-*Etape 5 : Dans l'onglet "Validation", évaluer la performance du modèle retenu précédemment (modèle 1 : régression logistique sur la base centrée réduite).*
 
 ### Combien d'individus sont classés dans la table de confusion ? A quelle base ces individus appartiennent-ils ?
 
@@ -139,12 +153,16 @@ $$
 ### Compléter le tableau suivant avec les performances de ce première modèle.
 
 | Modèle testé                       | Exactitude | Sensibilité | Spécificité | AUC  |
-|------------------------------------|------------|-------------|-------------|------|
+|-------------------------|------------|------------|------------|------------|
 | *Modèle 1 : Regression logistique* | 77 %       | 90 %        | 52 %        | 0,83 |
 
 : Performances de la regression logistique
 
-*Etape 6 : Revenir sur l'onglet "modèle" : choisir l'arbre et ajuster votre modèle sur les données d'entraînement (modèle 2 sur la base centrée réduite).*
+::: callout-note
+## Etape 6
+
+*Revenir sur l'onglet "modèle" : choisir l'arbre et ajuster votre modèle sur les données d'entraînement (modèle 2 sur la base centrée réduite).*
+:::
 
 ### Combien de variables prédictives sont utilisées par l'arbre de classification pour faire des estimations sur la base d'entraînement ?
 
@@ -164,12 +182,16 @@ C'est la variable alcohol qui est la plus discriminante. La valeur seuil choisir
 Cet arbre n'est pas très profond (2 nvieaux seulement). Il n'y a que 3 noeuds (splits), qui aboutissent à 4 groupes finaux (4 feuilles). Peut-être faudrait-il essayer de le complexifier davantage pour améliorer son pouvoir de prédiction. Mais ce n'est pas possible avec cette version de ASTA.
 :::
 
-*Etape 7 : Dans l'onglet "Validation", évaluer les performances du modèle 2 sur la base centrée réduite.*
+::: callout-note
+## Etape 7
+
+*Dans l'onglet "Validation", évaluer les performances du modèle 2 sur la base centrée réduite.*
+:::
 
 ### Compléter le tableau suivant avec les performances de ce deuxi-me modèle.
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------------------|------------|-------------|-------------|------|
+|--------------------------|------------|------------|------------|------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 
@@ -179,7 +201,11 @@ Cet arbre n'est pas très profond (2 nvieaux seulement). Il n'y a que 3 noeuds (
 La regression logistique est plus performante au regard de l'exactitude. Mais si on privilégie la spécificité, autrement dit on ne veut pas que notre modèle dise qu'un vin est mauvais à tort, alors il vaut mieux utiliser l'arbre de classification.
 :::
 
-*Etape 8 : Ajuster la forêt aléatoire sur la base d'entraînement (dans l'onglet validation) et evaluer la performance du modèle.*
+::: callout-note
+## Etape 8
+
+*Ajuster la forêt aléatoire sur la base d'entraînement (dans l'onglet validation) et evaluer la performance du modèle.*
+:::
 
 ### Combien d'arbres ont été construits par défaut par l'algorithme ?
 
@@ -196,12 +222,16 @@ Chaque arbre est constitué par défaut de 3 variables tirées aléatoirement (M
 ### Noter les indicateurs de performance de ce troisième modèle dans le tableau comparatif ci-dessous :
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------------------|------------|-------------|-------------|------|
+|--------------------------|------------|------------|------------|------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
 
-Etape 9 : *Ajuster le KNN (modèle des plus proches voisins) sur la base d'entraînement (dans l'onglet validation) et évaluer la performance du modèle.*
+::: callout-note
+## Etape 9
+
+*Ajuster le KNN (modèle des plus proches voisins) sur la base d'entraînement (dans l'onglet validation) et évaluer la performance du modèle.*
+:::
 
 ### Quelle valeur par défaut de K a été retenue dans le modèle des plus proches voisins ?
 
@@ -212,7 +242,7 @@ Par défaut, la valeur retenue par l'algorithme est 5.
 ### Noter les indicateurs dans le tableau comparatif des modèles
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------------------|------------|-------------|-------------|------|
+|--------------------------|------------|------------|------------|------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
@@ -224,7 +254,11 @@ Par défaut, la valeur retenue par l'algorithme est 5.
 Selon tous les indicateurs de performance, la forêt aléatoire avec 500 arbres et 3 variables sélectionnées aléatoirement, appliquée sur la base de données centrée réduite est la plus performante. C'est donc ce modèle qu'on va utiliser pour généraliser.
 :::
 
-*Etape 10 : Sélectionner le modèle le plus performant que vous avez retenu précemment (dans l'onglet "modèle"), et dans l'onglet "généralisation", ajuster le modèle.*
+::: callout-note
+## Etape 10
+
+*Sélectionner le modèle le plus performant que vous avez retenu précemment (dans l'onglet "modèle"), et dans l'onglet "généralisation", ajuster le modèle.*
+:::
 
 ### La base de test a-t-elle été utilisée pour construire le modèle final ?
 
@@ -239,7 +273,7 @@ Non. Le modèle final s'ajuste sur la base d'entraînement (70 % des données) e
 :::
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------------------|------------|-------------|-------------|------|
+|--------------------------|------------|------------|------------|------------|
 | *Modèle 1 : Regression logistique*   | 99 %       | 100 %       | 98 %        | 1    |
 | *Modèle 2 : arbre de classification* | 99 %       | 100 %       | 94 %        | 0,98 |
 | *Modèle 3 : forêt aléatoire*         | 99 %       | 100 %       | 98 %        | 1    |
@@ -267,7 +301,11 @@ Dans ce cas, autant choisir un modèle économe en ressources informatiques. Le 
 *Vous cherchez à prévoir le niveau de pollution à Rennes à partir de donnnées sur les températures, nébulosité et le niveau de pollution de la veille. Le niveau de pollution se mesure par le taux d'ozone, les relevés de températures se font à plusieurs heures de la journée, tout comme la mesure de la nébulosité (durée d'ensoleillement). Dans la base de données ozone, vous disposez de plus d'un millier de relevés qui ont été effectués, à partir desquels vous devez élaborer le modèle de prévision le plus performant possible.*
 :::
 
-*Etape 1 : Dans l'onglet "données" : cliquer pour explorer la base de données ozone.*
+::: callout-note
+## Etape 1
+
+*Dans l'onglet "données" : cliquer pour explorer la base de données ozone.*
+:::
 
 ### Combien de relevés ont été effectués ?
 
@@ -293,7 +331,11 @@ Il y a 12 variables prédictives, qui sont toutes quantitatives.
 Oui, 2 valeurs manquantes sur la variables Ne18.
 :::
 
-*Etape 2 : Dans l'onglet "préparation" : conserver 70 % de la base brute pour l'entraînement.*
+::: callout-note
+## Etape 2
+
+*Dans l'onglet "préparation" : conserver 70 % de la base brute pour l'entraînement.*
+:::
 
 ### Y a t il des données manquantes dans la base d'entraînement ?
 
@@ -301,7 +343,11 @@ Oui, 2 valeurs manquantes sur la variables Ne18.
 Oui également : ça signifie qu'elles ont été tirées aléatoirement dans la base d'entraînement (elles ne sont donc pas dans les bases de validation et de test).
 :::
 
-*Etape 3 : Dans l'onglet "modèle", choisir la forêt aléatoire et ajuster le modèle sur la base d'entraînement.*
+::: callout-note
+## Etape 3
+
+*Dans l'onglet "modèle", choisir la forêt aléatoire et ajuster le modèle sur la base d'entraînement.*
+:::
 
 ### Regarder le message dans la console de R Studio. Que s'est-il passé ?
 
@@ -317,7 +363,11 @@ On peut faire des imputations, avec différentes méthodes (si on ne veut vraime
 On peut aussi supprimer des individus (des lignes), si on a un échantillon suffisamment important et si il n'y a pas trop de valeurs manquantes.
 :::
 
-*Etape 4 : Dans l'onglet préparation, choisir la recette "imputation avec la moyenne" que vous appliquez sur la base d'entraînement.*
+::: callout-note
+## Etape 4
+
+*Dans l'onglet préparation, choisir la recette "imputation avec la moyenne" que vous appliquez sur la base d'entraînement.*
+:::
 
 ### Y a t il encore des données manquantes ?
 
@@ -325,7 +375,11 @@ On peut aussi supprimer des individus (des lignes), si on a un échantillon suff
 Non : ce qui signifie que la méthode d'imputation a bien marché.
 :::
 
-*Etape 5 : Dans l'onglet modèle, choisir à nouveau la forêt aléatoire et ajuster le modèle sur la base d'entraînement.*
+::: callout-note
+## Etape 5
+
+*Dans l'onglet modèle, choisir à nouveau la forêt aléatoire et ajuster le modèle sur la base d'entraînement.*
+:::
 
 ### Combien d'arbres de regression ont été générés par cette méthode ? De combien de variables sont-ils constitués ?
 
@@ -351,7 +405,11 @@ $$
 RMSE = \sqrt{159,97} = 12,6
 $$
 
-*Etape 6 : Dans l'onglet validation, évaluer les performances de ce premier modèle (forêt aléatoire) appliqué sur la base transformée (imputation des valeurs manquantes)*
+::: callout-note
+## Etape 6
+
+*Dans l'onglet validation, évaluer les performances de ce premier modèle (forêt aléatoire) appliqué sur la base transformée (imputation des valeurs manquantes)*
+:::
 
 ### Noter les indicateurs de performance de ce premier modèle dans le tableau comparatif ci-dessous :
 
@@ -365,12 +423,16 @@ $$
 Difficile à dire : on peut regarder le RMSE, qui nous dit qu'en moyenne, les prévisions s'éloignent de 13,9 des vraies valeurs. Le R² est assez proche de 1. Ce qui nous intéresse, c'est de savoir si ce modèle est le meilleur.
 :::
 
-*Etape 7 : Dans les onglets modèles et validation, ajuster les autres algorithmes sur la base d'entraînement, et évaluer leurs performances.*
+::: callout-note
+## Etape 7
+
+*Dans les onglets modèles et validation, ajuster les autres algorithmes sur la base d'entraînement, et évaluer leurs performances.*
+:::
 
 ### Compléter le tableau ci-dessous avec les performances des autres modèles :
 
 | Modèle testé sur la base avec imputation par la moyenne |  RSS   | MSE | RMSE |  R²  |
-|---------------------------------------------------------|:------:|:---:|:----:|:----:|
+|--------------------------------------|:-------:|:-------:|:-------:|:-------:|
 | *Modèle 1 : Forêt aléatoire*[^1]                        | 39 362 | 192 | 13,9 | 0,71 |
 | *Modèle 2 : Arbre de regression*                        | 56 900 | 278 | 16,7 | 0,59 |
 | *Modèle 3 : Régression linéaire*                        | 45 416 | 222 | 14,9 | 0,68 |
@@ -384,7 +446,11 @@ Difficile à dire : on peut regarder le RMSE, qui nous dit qu'en moyenne, les pr
 C'est la forêt aléatoire qu regard de tous les indicateurs.
 :::
 
-*Etape 8 : dans l'onglet "généralisation", ajuster la forêt aléatoire sur la base d'entraînement et la base de validation.*
+::: callout-note
+## Etape 8
+
+*Dans l'onglet "généralisation", ajuster la forêt aléatoire sur la base d'entraînement et la base de validation.*
+:::
 
 ### Le R² se rapproche de 1. Etait-ce prévisible ?
 
